--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Area/_GridViewPartial_area.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Area/_GridViewPartial_area.cshtml
@@ -66,8 +66,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdArea = DataBinder.Eval(tc.DataItem, "IdArea") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdArea = DataBinder.Eval(tc.DataItem, "IdArea") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdArea = DataBinder.Eval(tc.DataItem, "IdArea") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdArea = DataBinder.Eval(tc.DataItem, "IdArea") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -75,7 +75,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
