--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Division/_GridViewPartial_division.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Division/_GridViewPartial_division.cshtml
@@ -68,8 +68,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdDivision = DataBinder.Eval(tc.DataItem, "IdDivision") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdDivision = DataBinder.Eval(tc.DataItem, "IdDivision") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdDivision = DataBinder.Eval(tc.DataItem, "IdDivision") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdDivision = DataBinder.Eval(tc.DataItem, "IdDivision") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -77,7 +77,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
