--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Jornada/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Jornada/Anular.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.RRHH.ro_jornada_Info
 @{
-    ViewBag.Title = "Nueva jornada";
+    ViewBag.Title = "Anular jornada";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
