--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Area/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Area/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.RRHH.ro_area_Info
 
 @{
-    ViewBag.Title = "Consulta de Áreas";
+    ViewBag.Title = "Consulta de áreas";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
