--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Departamento/_GridViewPartial_departamento.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Departamento/_GridViewPartial_departamento.cshtml
@@ -62,8 +62,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdDepartamento = DataBinder.Eval(tc.DataItem, "IdDepartamento") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdDepartamento = DataBinder.Eval(tc.DataItem, "IdDepartamento") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdDepartamento = DataBinder.Eval(tc.DataItem, "IdDepartamento") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdDepartamento = DataBinder.Eval(tc.DataItem, "IdDepartamento") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -71,7 +71,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
