--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Jornada/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Jornada/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Jornada";
+    ViewBag.Title = "Consulta de jornadas";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
