--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipo/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipo/Anular.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.RRHH.ro_nomina_tipo_Info
 
 @{
-    ViewBag.Title = "Anular nómina tipo";
+    ViewBag.Title = "Anular tipo de nómina";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
