--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipoLiquidacion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipoLiquidacion/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.RRHH.ro_Nomina_Tipoliqui_Info
 @{
-    ViewBag.Title = "Nuevo tipo liquidación de nómina";
+    ViewBag.Title = "Nuevo tipo de liquidación de nómina";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
