--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/BaseImpuestoRenta/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/BaseImpuestoRenta/Nuevo.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.RRHH.ro_tabla_Impu_Renta_Info
 
 @{
-    ViewBag.Title = "Nueva base impuesto renta";
+    ViewBag.Title = "Nueva base impuesto a la renta";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
