--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/DepartamentoPorArea/_GridViewPartial_departamento_area.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/DepartamentoPorArea/_GridViewPartial_departamento_area.cshtml
@@ -55,8 +55,8 @@
             {
 
                 ViewContext.Writer.Write(
-            Html.ActionLink("Modificar", "Modificar", new { Secuencia = DataBinder.Eval(tc.DataItem, "Secuencia") }) + "&nbsp;" +
-                    Html.ActionLink("Anular", "Anular", new { Secuencia = DataBinder.Eval(tc.DataItem, "Secuencia") },
+            Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), Secuencia = DataBinder.Eval(tc.DataItem, "Secuencia") }) + "&nbsp;" +
+                    Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), Secuencia = DataBinder.Eval(tc.DataItem, "Secuencia") },
                         new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                 );
 
@@ -64,7 +64,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
