--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/BaseImpuestoRenta/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/BaseImpuestoRenta/Modificar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.RRHH.ro_tabla_Impu_Renta_Info
 @{
-    ViewBag.Title = "Modificar base impuesto renta";
+    ViewBag.Title = "Modificar base impuesto a la renta";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
