--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Cargo/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Cargo/Nuevo.cshtml
@@ -10,6 +10,7 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Nuevo", "Cargo", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
