--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/DepartamentoPorArea/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/DepartamentoPorArea/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.RRHH.ro_area_Info
 
 @{
-    ViewBag.Title = "Departamento por área";
+    ViewBag.Title = "Consulta de departamentos por área";
     @Html.Action("GridViewPartial_departamento_area")
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
