--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/DepartamentoPorArea/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/DepartamentoPorArea/Modificar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.RRHH.ro_area_x_departamento_Info
 @{
-    ViewBag.Title = "Modificar área";
+    ViewBag.Title = "Modificar asignación de departamentos por área";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -14,9 +14,7 @@
     @Html.HiddenFor(q => q.IdArea)
     @Html.HiddenFor(q => q.Secuencia)
     @Html.HiddenFor(q => q.IdDepartamento)
-
-
-
+    @Html.HiddenFor(q => q.IdEmpresa)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -66,8 +64,6 @@
                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
                    settings.Properties.NullText = "== Seleccione ==";
                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-                   settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e,){get_id()}";
                }).BindList(ViewBag.lst_area).GetHtml()
                     @Html.ValidationMessageFor(q => q.IdArea, "", new { @class = "text-danger" })
                 </div>
@@ -95,8 +91,6 @@
                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
                    settings.Properties.NullText = "== Seleccione ==";
                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-                   settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e,){get_id()}";
                }).BindList(ViewBag.lst_departamento).GetHtml()
                     @Html.ValidationMessageFor(q => q.IdDepartamento, "", new { @class = "text-danger" })
                 </div>
