--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGastosPersonales/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGastosPersonales/Nuevo.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.RRHH.ro_tipo_gastos_personales_Info
 
 @{
-    ViewBag.Title = "Nuevo tipo de gasto";
+    ViewBag.Title = "Nuevo tipo de gasto personal";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
