--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoPrestamo/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoPrestamo/Modificar.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.RRHH.ro_tipo_prestamo_Info
 
 @{
-    ViewBag.Title = "Modificar tipo préstamo";
+    ViewBag.Title = "Modificar tipo de préstamo";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
