--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Turno/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Turno/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Turnos";
+    ViewBag.Title = "Consultar turnos";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
