--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Turno/_GridView1Partial_turnos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Turno/_GridView1Partial_turnos.cshtml
@@ -69,8 +69,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdTurno = DataBinder.Eval(tc.DataItem, "IdTurno") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdTurno = DataBinder.Eval(tc.DataItem, "IdTurno") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdTurno = DataBinder.Eval(tc.DataItem, "IdTurno") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdTurno = DataBinder.Eval(tc.DataItem, "IdTurno") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -78,7 +78,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
