--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Horario/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Horario/Modificar.cshtml
@@ -10,6 +10,7 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Modificar", "Horario", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa);
     @Html.HiddenFor(q => q.IdHorario);
 <div class="row">
     <div class="col-md-12">
