--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Turno/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Turno/Nuevo.cshtml
@@ -11,6 +11,7 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Nuevo", "Turno", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -28,8 +29,12 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="NumDocumento">Lunes</label>
-                    @Html.EditorFor(q => q.Lunes, new { @class = "form-control" })
+                    @Html.DevExpress().CheckBoxFor(q => q.Lunes, settings =>
+                    {
+                        settings.Name = "Lunes";
+                        settings.Text = "Lunes";
+
+                    }).GetHtml()
                     @Html.ValidationMessageFor(q => q.Lunes, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -39,8 +44,12 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="NumDocumento">Martes</label>
-                    @Html.EditorFor(q => q.Martes, new { @class = "form-control" })
+                    @Html.DevExpress().CheckBoxFor(q => q.Martes, settings =>
+                    {
+                        settings.Name = "Martes";
+                        settings.Text = "Martes";
+
+                    }).GetHtml()
                     @Html.ValidationMessageFor(q => q.Martes, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -50,8 +59,12 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="NumDocumento">Miércoles</label>
-                    @Html.EditorFor(q => q.Miercoles, new { @class = "form-control" })
+                    @Html.DevExpress().CheckBoxFor(q => q.Miercoles, settings =>
+                    {
+                        settings.Name = "Miercoles";
+                        settings.Text = "Miércoles";
+
+                    }).GetHtml()
                     @Html.ValidationMessageFor(q => q.Miercoles, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -61,8 +74,12 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="NumDocumento">Jueves</label>
-                    @Html.EditorFor(q => q.Jueves, new { @class = "form-control" })
+                    @Html.DevExpress().CheckBoxFor(q => q.Jueves, settings =>
+                    {
+                        settings.Name = "Jueves";
+                        settings.Text = "Jueves";
+
+                    }).GetHtml()
                     @Html.ValidationMessageFor(q => q.Jueves, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -72,8 +89,12 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="NumDocumento">Viernes</label>
-                    @Html.EditorFor(q => q.Viernes, new { @class = "form-control" })
+                    @Html.DevExpress().CheckBoxFor(q => q.Viernes, settings =>
+                    {
+                        settings.Name = "Viernes";
+                        settings.Text = "Viernes";
+
+                    }).GetHtml()
                     @Html.ValidationMessageFor(q => q.Viernes, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -83,8 +104,12 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="NumDocumento">Sábado</label>
-                    @Html.EditorFor(q => q.Sabado, new { @class = "form-control" })
+                    @Html.DevExpress().CheckBoxFor(q => q.Sabado, settings =>
+                    {
+                        settings.Name = "Sabado";
+                        settings.Text = "Sábado";
+
+                    }).GetHtml()
                     @Html.ValidationMessageFor(q => q.Sabado, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -94,8 +119,12 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="NumDocumento">Domingo</label>
-                    @Html.EditorFor(q => q.Domingo, new { @class = "form-control" })
+                    @Html.DevExpress().CheckBoxFor(q => q.Domingo, settings =>
+                    {
+                        settings.Name = "Domingo";
+                        settings.Text = "Domingo";
+
+                    }).GetHtml()
                     @Html.ValidationMessageFor(q => q.Domingo, "", new { @class = "text-danger" })
                 </div>
             </div>
