--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipo/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipo/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.RRHH.ro_nomina_tipo_Info
 @{
     ViewBag.Title = "Consulta de tipo de nómina";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,6 +10,8 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
     @Html.Action("GridViewPartial_nomina_tipo")
 
