--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipo/_GridViewPartial_nomina_tipo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipo/_GridViewPartial_nomina_tipo.cshtml
@@ -92,6 +92,7 @@
 
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
