--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Division/_GridViewPartial_division.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Division/_GridViewPartial_division.cshtml
@@ -4,8 +4,6 @@
     {
         settings.Name = "GridView_division";
         settings.CallbackRouteValues = new { Controller = "Division", Action = "GridViewPartial_division" };
-
-
         settings.KeyFieldName = "IdDivision";
 
         settings.Width = Unit.Percentage(100);
@@ -20,7 +18,6 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-
         settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Hidden;
         settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
         settings.Settings.VerticalScrollableHeight = 400;
@@ -29,12 +26,10 @@
         settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
         settings.SettingsPager.AlwaysShowPager = true;
 
-
         settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
         settings.Settings.ShowFilterRow = true;
         settings.Settings.ShowHeaderFilterButton = true;
         settings.SettingsBehavior.AllowSelectByRowClick = true;
-
 
         settings.SettingsExport.EnableClientSideExportAPI = true;
         settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.WYSIWYG;
@@ -96,7 +91,7 @@
 
             });
         });
-
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
