--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Area/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Area/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@model Core.Erp.Info.RRHH.ro_area_Info
-
 @{
     ViewBag.Title = "Consulta de áreas";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -9,4 +8,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@Html.Action("GridViewPartial_area")
+@using (Html.BeginForm())
+{
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+
+    @Html.Action("GridViewPartial_area")
+
+}
+
+
