--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Cargo/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Cargo/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.RRHH.ro_cargo_Info
 @{
     ViewBag.Title = "Consulta de cargos";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,6 +10,9 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+
     @Html.Action("GridViewPartial_cargo")
 
 }
