--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/DepartamentoPorArea/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/DepartamentoPorArea/Index.cshtml
@@ -1,14 +1,19 @@
-﻿@model Core.Erp.Info.RRHH.ro_area_Info
+﻿@model Core.Erp.Info.RRHH.ro_area_x_departamento_Info
 
 @{
     ViewBag.Title = "Consulta de departamentos por área";
-    @Html.Action("GridViewPartial_departamento_area")
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
     }
     Layout = "~/Views/Shared/_Layout.cshtml";
+}
+@using (Html.BeginForm())
+{
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
+    @Html.Action("GridViewPartial_departamento_area")
 }
 
 
