--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/DepartamentoPorArea/_GridViewPartial_departamento_area.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/DepartamentoPorArea/_GridViewPartial_departamento_area.cshtml
@@ -76,7 +76,8 @@
         settings.Columns.Add("division", "División").Width = Unit.Percentage(25);
         settings.Columns.Add("area", "Área").Width = Unit.Percentage(25);
         settings.Columns.Add("departamento", "Departamento").Width = Unit.Percentage(40);
-        ;
+
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
     if (ViewData["EditError"] != null){
         grid.SetEditErrorText((string)ViewData["EditError"]);
