--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Horario/_GridViewPartial_horarios.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Horario/_GridViewPartial_horarios.cshtml
@@ -98,6 +98,7 @@
 
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
