--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Jornada/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Jornada/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model Core.Erp.Info.RRHH.ro_jornada_Info
+@{
     ViewBag.Title = "Consulta de jornadas";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
@@ -9,6 +10,9 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+
     @Html.Action("GridViewPartial_Jornada");
 
 }
