--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Jornada/_GridViewPartial_Jornada.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Jornada/_GridViewPartial_Jornada.cshtml
@@ -97,6 +97,7 @@
 
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
