--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipoLiquidacion/_GridViewPartial_nomina_tipo_liquidacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipoLiquidacion/_GridViewPartial_nomina_tipo_liquidacion.cshtml
@@ -96,8 +96,7 @@
 
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
-
-
 }
 @grid.Bind(Model).GetHtml()
