--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGastosPersonalesAnual/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGastosPersonalesAnual/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.RRHH.ro_tipo_gastos_personales_maxim_x_anio_Info
 @{
     ViewBag.Title = "Consulta de valores anuales de gastos personales";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -11,5 +11,7 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+
     @Html.Action("GridViewPartial_tipo_gastos_personal_anual", new {ViewBag.IdTipoGasto })
 }
