--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoPrestamo/_GridViewPartial_tipo_prestamo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoPrestamo/_GridViewPartial_tipo_prestamo.cshtml
@@ -23,7 +23,6 @@
         settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
         settings.SettingsPager.AlwaysShowPager = true;
 
-
         settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
         settings.Settings.ShowFilterRow = true;
         settings.Settings.ShowHeaderFilterButton = true;
@@ -92,7 +91,7 @@
 
             });
         });
-
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
