--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Turno/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Turno/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.RRHH.ro_turno_Info
 @{
     ViewBag.Title = "Consultar turnos";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -9,10 +9,10 @@
 }
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
     @Html.Action("GridView1Partial_turnos")
-
-
 }
 
 
