--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_ctble_provisiones.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_ctble_provisiones.cshtml
@@ -114,13 +114,7 @@
                 Html.RenderPartial("_CmbCuenta_provisiones_credito", DataBinder.Eval(c.DataItem, "IdCtaCble_prov_credito"));
             });
         });
-
-
-
-
-
-
-
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
     if (ViewData["EditError"] != null)
     {
