--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Index.cshtml
@@ -11,7 +11,8 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Index", "Empleado", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
-    @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
