--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_empleados.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_empleados.cshtml
@@ -121,7 +121,7 @@
                 }).Render();
             });
         });
-
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
